--- a/configure.ac
+++ b/configure.ac
@@ -1142,6 +1142,43 @@ AC_CHECK_DECLS([vsnprintf],[],[],[
 
 ########
 #
+# Check for Rust
+#
+########
+
+AC_CHECK_PROG(CARGO, [cargo], [yes], [no])
+AS_IF(test x$CARGO = xno,
+    AC_MSG_ERROR([cargo is required.  Please install the Rust toolchain from https://www.rust-lang.org/])
+)
+AC_CHECK_PROG(RUSTC, [rustc], [yes], [no])
+AS_IF(test x$RUSTC = xno,
+    AC_MSG_ERROR([rustc is required.  Please install the Rust toolchain from https://www.rust-lang.org/])
+)
+
+dnl Specify --enable-rust-debug to make a development release.  By default,
+dnl we build in public release mode.
+
+AC_ARG_ENABLE(rust-debug,
+              AC_HELP_STRING([--enable-rust-debug],
+                             [Build Rust code with debugging information [default=no]]),
+              [rust_debug_release=$enableval],
+              [rust_debug_release=no])
+
+AC_MSG_CHECKING(whether to build Rust code with debugging information)
+if test "x$rust_debug_release" = "xyes" ; then
+    AC_MSG_RESULT(yes)
+    RUST_TARGET_SUBDIR=debug
+else
+    AC_MSG_RESULT(no)
+    RUST_TARGET_SUBDIR=release
+fi
+AM_CONDITIONAL([RUST_DEBUG_RELEASE], [test "x$rust_debug_release" = "xyes"])
+
+AC_SUBST([RUST_TARGET_SUBDIR])
+
+
+########
+#
 # C++ Support Tests (For Magick++)
 #
 ########
