--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -6,6 +6,11 @@ edition = "2018"
 publish = false
 
 [dependencies]
+paste = "1"
+libc = "0.2"
+
+[build-dependencies]
+bindgen = "0.56"
 
 [lib]
 name = "imagemagick_rust"
