--- a/Makefile.in
+++ b/Makefile.in
@@ -3483,8 +3483,8 @@ windows_font_dir = @windows_font_dir@
 RUST_SOURCES = \
 	rust/Cargo.toml \
 	rust/build.rs \
-	rust/src/wrapper.c \
-	rust/src/wrapper.h \
+	rust/wrapper.c \
+	rust/wrapper.h \
 	rust/src/lib.rs \
 	rust/src/bindings.rs \
 	rust/src/coders/mod.rs \
