--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,14 @@ jobs:
         apt-get update -y
         apt-get install -y autoconf pkg-config ${{matrix.compiler}}
 
+    - name: Install Rust
+      uses: actions-rs/toolchain@v1
+      with:
+        profile: minimal
+        toolchain: stable
+        default: true
+        override: true
+
     - name: Configure ImageMagick
       run: |
         export CC=${{matrix.compiler}}
@@ -59,6 +67,14 @@ jobs:
         export HOMEBREW_NO_AUTO_UPDATE=1
         brew install autoconf libtool pkg-config libxml2
 
+    - name: Install Rust
+      uses: actions-rs/toolchain@v1
+      with:
+        profile: minimal
+        toolchain: stable
+        default: true
+        override: true
+
     - name: Configure ImageMagick
       run: |
         export CFLAGS="-Wno-deprecated-declarations"
@@ -79,6 +95,14 @@ jobs:
       with:
         path: ImageMagick
         fetch-depth: 1
+
+    - name: Install Rust
+      uses: actions-rs/toolchain@v1
+      with:
+        profile: minimal
+        toolchain: stable
+        default: true
+        override: true
 
     - uses: actions/checkout@v2
       with:
